--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,26 +1,37 @@
 FROM ruby:3.3.0
 
+# Instala Node.js 20, Yarn e PostgreSQL client
 RUN apt-get update -qq && \
-    apt-get install -y nodejs postgresql-client && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y curl gnupg build-essential libpq-dev && \
+    curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
+    apt-get install -y nodejs yarn postgresql-client && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Configuração para produção
+# Variáveis de ambiente para produção
 ENV RAILS_ENV=production
 ENV RACK_ENV=production
 
+# Copia Gemfile e instala gems
 COPY Gemfile Gemfile.lock ./
 RUN bundle install --without development test
 
+# Copia todo o código
 COPY . .
 
-# Pré-compilar assets (se usar)
+# Passa a chave mestre para pré-compilar assets
+ARG RAILS_MASTER_KEY
+ENV RAILS_MASTER_KEY=$RAILS_MASTER_KEY
+
+# Pré-compila assets em produção
 RUN bundle exec rails assets:precompile
 
+# Cria pasta para pids
 RUN mkdir -p tmp/pids
 
+# Porta padrão do Rails
 EXPOSE 3000
 
+# Comando para rodar a aplicação
 CMD ["bin/rails", "server", "-b", "0.0.0.0"]
