--- a/config/database.yml
+++ b/config/database.yml
@@ -79,9 +79,12 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary:
+  primary: &primary_production
     <<: *default
     url: <%= ENV['DATABASE_URL'] %>
+  cache:
+    <<: *primary_production
+  queue:
+    <<: *primary_production
   cable:
-    <<: *default
-    url: <%= ENV['DATABASE_URL'] %>
+    <<: *primary_production
